got the awesomemodel working with the mealplan detais

--- a/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
+++ b/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
@@ -6,7 +6,8 @@
 <h2>AddMealPlan</h2>
 
 
-<form asp-controller="MealPlan" asp-action="AddMealPlan" method="post">
+@*<form asp-controller="MealPlan" asp-action="AddMealPlan"  asp-route-model="@Model" method="post">*@
+<form asp-controller="MealPlan" asp-action="Submit"  method="post">
 
     <div>
         <label asp-for="MealPlan.MealPlanName">Meal Plan Name</label>
@@ -24,7 +25,7 @@
     <div>
         <div>
             <label asp-for="Recipe.RecipeName">Recipe to Add</label>
-            <select asp-for="Recipe.RecipeName" asp-items="Model.Recipe.RecipeDropDown"></select>
+            <select asp-for="@Model.Recipe.RecipeName" asp-items="Model.Recipe.RecipeDropDown" ></select>
         </div>
     </div>
     <div id="button">
