fixed 3 buttons on home carousel

--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                 <div class="carousel-caption" role="option">
                     <p>
                         <span style="font-weight:bold">Learn about the recipes in our Database!</span>
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
+                        <a class="btn btn-default" href="/Recipe/Index">
                             View Our Recipes
                         </a>
                     </p>
@@ -45,7 +45,7 @@
                     <p>
                         <span style="font-weight:bold">
                             Build your own customized Meal Plan!</span>
-                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
+                            <a class="btn btn-default" href="/MealPlan/Index">
                                 Learn More!
                             </a>
                     </p>
@@ -57,7 +57,7 @@
                     <p style="color:whitesmoke">
                         <span style="font-weight:bold">
                             View your grocery list at any time.</span>
-                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
+                            <a class="btn btn-default" href="/GroceryList/Index">
                                 Sign Up!
                             </a>
                     </p>
