--- a/WebApplication.Web/Views/Shared/_Layout.cshtml
+++ b/WebApplication.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a asp-area="" asp-controller="Recipe" asp-action="Index" style="color:darkslategray">Our Recipes</a></li>
                     <li><a asp-area="" asp-controller="MealPlan" asp-action="AddMealPlan" style="color:darkslategray">MealPlans</a></li>
                     <li><a asp-area="" asp-controller="GroceryList" asp-action="Index" style="color:darkslategray">Grocery List</a></li>
-
+                    <li><a asp-area="" asp-controller="Recipe" asp-action="AddRecipe" style="color:darkslategray">Add Recipe</a></li>
 
                 </ul>
                 
