--- a/WebApplication.Web/Views/Recipe/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipe/Detail.cshtml
@@ -6,7 +6,6 @@
 }
 
 <style>
-
     div.background {
         height: 100%;
         width: 100%;
@@ -14,16 +13,10 @@
         background-size: 100%;
         background-attachment: fixed;
     }
-
-    /*.topRecipes {
-        opacity: 1;
-    }*/
-
 </style>
 
 <body>
     <div class="background">
-        
         <div>
             <h2 class="topRecipes" align="center" style="color:black; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
             <br />
@@ -33,7 +26,6 @@
                 <div class="row">
                     <p style="color:black; font-weight: bold; opacity: 0.8">Cook Time: @Model.CookTime Min Prep Time: @Model.PrepTime Min</p>
                     <img class="detailRecipeImage" style="opacity: 0.8" src="@Model.RecipeImage" alt="Recipe Image">
-
 
                     <div>
                         @{ <table class="table table-striped table-dark">
@@ -53,18 +45,19 @@
                                         <td>@Model.VeganFriendly</td>
                                         <td>@Model.DairyFree</td>
                                         <td>@Model.NutFree</td>
-
-
                                     </tr>
-
                                 </tbody>
                             </table>
                         }
                     </div>
-
                 </div>
-                <p style="color:black; font-weight: bold; opacity: 0.8; font-size: larger"> @Model.Instructions</p>
+                <div>
+                    <p style="color:black; font-weight: bold; opacity: 0.8; font-size: larger"> @Model.Instructions</p>
+                </div>
             </div>
+            <br />
+            <br />
+            <br />
             <div>
                 <p id="buttonOnAllRecipesPage">
                     <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
