--- a/WebApplication.Web/Views/GroceryList/Index.cshtml
+++ b/WebApplication.Web/Views/GroceryList/Index.cshtml
@@ -4,10 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h2 align="center" style="color: orange; font-size: xx-large">Grocery List</h2>
-
 <body>
+    <h2 align="center" style="color: black; font-size: xx-large">Grocery List</h2>
+    <br />
+    <br />
     <div class="container-fluid">
         <div class="row">
             <div>
@@ -27,6 +27,8 @@
             </div>
         </div>
     </div>
+    <br />
+    <br />
     <div>
         <p id="buttonOnGroceryListPage">
             <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
