changed opacity of add recipe background

--- a/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
+++ b/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
@@ -8,7 +8,7 @@
     body {
         height: 100%;
         width: 100%;
-        background-image: url("https://images.wallpaperscraft.com/image/notebook_pencil_recipe_seasoning_board_77512_2048x1152.jpg");
+        background: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,.3)), url("https://images.wallpaperscraft.com/image/notebook_pencil_recipe_seasoning_board_77512_2048x1152.jpg");
         background-size: 100%;
         background-attachment: fixed;
     }
