--- a/WebApplication.Web/Views/Shared/_Layout.cshtml
+++ b/WebApplication.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index" style="color:black">Home Page</a></li>
                     <li><a asp-area="" asp-controller="Recipe" asp-action="Index" style="color:darkslategray">Our Recipes</a></li>
-                    <li><a asp-area="" asp-controller="MealPlan" asp-action="AddMealPlan" style="color:darkslategray">MealPlans</a></li>
+                    <li><a asp-area="" asp-controller="MealPlan" asp-action="Index" style="color:darkslategray">Meal Plans</a></li>
                     <li><a asp-area="" asp-controller="GroceryList" asp-action="Index" style="color:darkslategray">Grocery List</a></li>
                     <li><a asp-area="" asp-controller="Recipe" asp-action="AddRecipe" style="color:darkslategray">Add Recipe</a></li>
 
