--- a/WebApplication.Web/Views/Recipe/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipe/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Recipes
+﻿@model AwesomeModel
 @{
     ViewData["Title"] = "Detail";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -18,14 +18,29 @@
 <body>
     <div class="background">
         <div>
-            <h2 class="topRecipes" align="center" style="color:black; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
-            <br />
+            <h2 class="topRecipes" align="center" style="color:black; font-size: xx-large">@Model.Recipe.RecipeName Recipe Details</h2>
             <br />
             <br />
             <div class="container-fluid">
                 <div class="row">
-                    <p style="color:black; font-weight: bold; opacity: 0.8">Cook Time: @Model.CookTime Min Prep Time: @Model.PrepTime Min</p>
-                    <img class="detailRecipeImage" style="opacity: 0.8" src="@Model.RecipeImage" alt="Recipe Image">
+                    <div>
+                        {
+                        <div class="col-md-6">
+                            <div class="inline-block" style="color: black; font-size: x-large; font-style: oblique;">
+                                <p style="color:black; font-weight: bold; opacity: 0.8">Cook Time: @Model.Recipe.CookTime | Min Prep Time: @Model.Recipe.PrepTime Min</p>
+                                <img class="detailRecipeImage" style="opacity: 0.8" src="@Model.Recipe.RecipeImage" alt="Recipe Image">
+                            </div>
+                            @foreach (Ingredients ingredient in Model.Ingredients)
+                            {
+                            <div class="inline-block" style="color: black; font-size: x-large; font-style: oblique;">
+                                <p>@ingredient.IngredientImage</p>
+                                <p>@ingredient.IngredientName</p>
+                            </div>
+                            }
+                        </div>
+                        }
+                        }
+                    </div>
 
                     <div>
                         @{ <table class="table table-striped table-dark">
@@ -40,22 +55,22 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>@Model.GlutenFree</td>
-                                        <td>@Model.VegetarianFriendly</td>
-                                        <td>@Model.VeganFriendly</td>
-                                        <td>@Model.DairyFree</td>
-                                        <td>@Model.NutFree</td>
+                                        <td>@Model.Recipe.GlutenFree</td>
+                                        <td>@Model.Recipe.VegetarianFriendly</td>
+                                        <td>@Model.Recipe.VeganFriendly</td>
+                                        <td>@Model.Recipe.DairyFree</td>
+                                        <td>@Model.Recipe.NutFree</td>
                                     </tr>
                                 </tbody>
                             </table>
                         }
                     </div>
-                </div>
-                <div>
-                    <p style="color:black; font-weight: bold; opacity: 0.8; font-size: larger"> @Model.Instructions</p>
+
+                    <div>
+                        <p style="color:black; font-weight: bold; opacity: 0.8; font-size: larger"> @Model.Recipe.Instructions</p>
+                    </div>
                 </div>
             </div>
-            <br />
             <br />
             <br />
             <div>
