Added recipes to returned mealplan object

--- a/WebApplication.Web/Views/MealPlan/Index.cshtml
+++ b/WebApplication.Web/Views/MealPlan/Index.cshtml
@@ -26,7 +26,7 @@
                             </a>
                             <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
                                 <p>@plan.MealPlanName</p>
-                                <p>@plan.RecipeCount Recipes Added</p>
+                                <p>@plan.Recipes.Count() Recipes Added</p>
                             </div>
                         </div>
                     }
