--- a/WebApplication.Web/Views/Account/Register.cshtml
+++ b/WebApplication.Web/Views/Account/Register.cshtml
@@ -18,18 +18,18 @@
     <h2 style="color:white">Register</h2>
 
     <form asp-controller="account" asp-action="register" method="post">
-        <div class="form-group" style="color:white">
-            <label asp-for="Email"></label>
+        <div class="form-group" >
+            <label asp-for="Email" style="color:white"></label>
             <input asp-for="Email" placeholder="Email" />
             <span asp-validation-for="Email"></span>
         </div>
-        <div class="form-group" style="color:white">
-            <label asp-for="Password"></label>
+        <div class="form-group" >
+            <label asp-for="Password" style="color:white"></label>
             <input type="password" asp-for="Password" />
             <span asp-validation-for="Password"></span>
         </div>
-        <div class="form-group" style="color:white">
-            <label asp-for="ConfirmPassword"></label>
+        <div class="form-group" >
+            <label asp-for="ConfirmPassword" style="color:white"></label>
             <input type="password" asp-for="ConfirmPassword" />
             <span asp-validation-for="ConfirmPassword"></span>
         </div>
