--- a/WebApplication.Web/Views/MealPlan/MealPlanDetail.cshtml
+++ b/WebApplication.Web/Views/MealPlan/MealPlanDetail.cshtml
@@ -27,13 +27,20 @@
     <tbody>
         <tr>
             @{
-                for (int i =0; i < Model.MealPlan.RecipesList.Count; i++)
+                for (int i = 0; i < Model.MealPlan.RecipesList.Count; i++)
                 {
-                <th scope="row">@i</th>
-                <td>@Model.MealPlan.RecipesList[i].RecipeName</td>
-                <td>@Model.MealPlan.RecipesList[i].RecipeType</td>
-                    }
+                    <th scope="row">@i</th>
+                    <td>@Model.MealPlan.RecipesList[i].RecipeName</td>
+                    <td>@Model.MealPlan.RecipesList[i].RecipeType</td>
+                    <td>
+                        <form asp-controller="MealPlan" asp-action="Remove" method="post">
+                            <input type="hidden" name="recipeID" id="recipeID" value="@Model.MealPlan.RecipesList[i].RecipeId" />
+                            <input type="hidden" name="mealPlanID" id="mealPlanID" value="@Model.MealPlan.MealPlanId" />
+                            <input type="submit" value="Delete" />
+                        </form>
+                    </td>
                 }
+            }
         </tr>
 
     </tbody>
