--- a/WebApplication.Web/wwwroot/css/site.css
+++ b/WebApplication.Web/wwwroot/css/site.css
@@ -50,3 +50,10 @@ body {
 .ingredientImage {
     width: 50px;    
 }
+
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
