--- a/WebApplication.Web/Views/MealPlan/Index.cshtml
+++ b/WebApplication.Web/Views/MealPlan/Index.cshtml
@@ -39,10 +39,15 @@
                 </form>
 
             </div>
-            <div class="row">
-                <div class="col-md-2 recipeList text-center">
+            <div class="row ">
+                <div class="col-md-2 hidden-sm hidden-xs text-center">
                     <a data-toggle="collapse" data-target="#AddMealPlan">
-                        <span class="glyphicon glyphicon-plus"></span>
+                        <span class="glyphicon glyphicon-plus" style="font-size:65px;padding-top: 35px;padding-bottom:10px;color:lightgreen;"></span>
+                    </a>
+                </div>
+                <div class="col-md-12 visible-sm visible-xs text-center">
+                    <a data-toggle="collapse" data-target="#AddMealPlan">
+                        <span class="glyphicon glyphicon-plus" style="font-size:25px;padding-top: 15px;padding-bottom:10px;color:lightgreen;"></span>
                     </a>
                 </div>
 
