--- a/WebApplication.Web/wwwroot/css/site.css
+++ b/WebApplication.Web/wwwroot/css/site.css
@@ -56,6 +56,7 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+}
 .recipeList{
     background-color:lightgray;
     opacity:0.4;
