--- a/WebApplication.Web/Views/GroceryList/Index.cshtml
+++ b/WebApplication.Web/Views/GroceryList/Index.cshtml
@@ -13,8 +13,8 @@
             <div>
                 @{ foreach (GroceryLists groceryLists in Model)
                     {
-                <div class="col-md-4">
-                    <a href="/GroceryList/GroceryListDetail?GroceryListId=@groceryLists">
+                <div class="col-md-12">
+                    <a href="/GroceryList/GroceryListDetail?GroceryListId=@groceryLists.GroceryListId">
                         <img class="groceryListImage" src="@groceryLists.GroceryListImage" alt="Grocery List Image">
                     </a>                 
 
