--- a/WebApplication.Web/wwwroot/css/site.css
+++ b/WebApplication.Web/wwwroot/css/site.css
@@ -56,6 +56,8 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+}
+
 .recipeList{
     background-color:lightgray;
     opacity:0.4;
@@ -63,4 +65,8 @@ body {
 
 .transparentBlue{
     background-color:lightblue;
+}
+
+.groceryListImage{
+    width: 20%;
 }
