add ingredient setup

--- a/WebApplication.Web/Views/GroceryList/AddGroceryList.cshtml
+++ b/WebApplication.Web/Views/GroceryList/AddGroceryList.cshtml
@@ -18,7 +18,7 @@
         <label asp-for="GroceryListImage">Grocery List Image (url only):</label>
     </div>
     <div class="fields">
-        <input type="text" asp-for="GroceryListImage" />
+        <input type="url" asp-for="GroceryListImage" />
     </div>
     <div class="labels">
         <label asp-for="Quantity">Quantity:</label>
