--- a/WebApplication.Web/Views/GroceryList/GroceryListDetail.cshtml
+++ b/WebApplication.Web/Views/GroceryList/GroceryListDetail.cshtml
@@ -16,8 +16,7 @@
                         <div class="col-md-12">
 
                             <img class="recipeImage" src="@groceryLists.GroceryListImage" alt="Recipe Image">
-
-                            <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
+                            <div style="color: orange; font-size: x-large; font-style: oblique;">
                                 <p>@groceryLists.Item</p>
                                 <p>@groceryLists.Quantity</p>
                             </div>
