--- a/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
+++ b/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
@@ -136,7 +136,7 @@
         <label asp-for="RecipeImage">Recipe Image (enter the url address of the image only):</label>
     </div>
     <div class="fields">
-        <input type="text" asp-for="RecipeImage" />
+        <input type="url" asp-for="RecipeImage" />
     </div>
     <br />
     <div class="labels">
